# picopeeker

./: .gitignore  CMakeLists.txt  README.md  blink.c  build.sh  example.c  memory_explorer.c  pico_sdk_import.cmake  picopeeker.h  run
.cache/clangd/index/: example.c.45490C2453A7AFB3.idx  picopeeker.h.CC6BFCA178D181AE.idx
.github/workflows/: release.yml
desktop-app/: Makefile  go.mod  go.sum  main.go
desktop-app/cmd/picopeeker/: main.go
desktop-app/internal/config/: config.go
desktop-app/internal/format/: formatters.go
desktop-app/internal/serial/: serial.go
desktop-app/internal/ui/: ui.go
desktop-app/internal/util/: util.go
